some minor fixes and additions made in class- plus the solution the the tabs3-addtab problem we had in class

--- a/src/samples/040-MonsterForm/monster-edit.component.html
+++ b/src/samples/040-MonsterForm/monster-edit.component.html
@@ -40,7 +40,7 @@
             <div class="form-group">
                 <label for="food">Favorite Food</label>
                 <select class="form-control" required [(ngModel)]="model.favFood" ngControl="food" #food="ngForm">
-                    <option *ngFor="let food of foods" [value]="food">{{food}}</option>
+                    <option *ngFor="let food of foods" [value]="food">{{food.name}}</option>
                 </select>
             </div>
 
