--- a/src/day2/routing-monsters/app.component.scss
+++ b/src/day2/routing-monsters/app.component.scss
@@ -1,29 +1,73 @@
-h1 {color: #369; font-family: Arial, Helvetica, sans-serif; font-size: 250%;}
-h2 { color: #369; font-family: Arial, Helvetica, sans-serif;  }
-h3 { color: #444; font-weight: lighter; }
-body { margin: 2em; }
-body, input[text], button { color: #888; font-family: Cambria, Georgia; }
-button {padding: 0.2em; font-size: 14px}
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
 
+h2 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h3 {
+  color: #444;
+  font-weight: lighter;
+}
+
+body {
+  margin: 2em;
+}
+
+body, input[text], button {
+  color: #888;
+  font-family: Cambria, Georgia;
+}
+
+button {
+  padding: 0.2em;
+  font-size: 14px
+}
 
 ul.list1 {
   list-style-type: none;
   margin-left: 1em;
   padding: 0;
   width: 20em;
-  li { cursor: pointer; position: relative; left: 0; transition: all 0.2s ease; }
-  li:hover {color: #369; background-color: #EEE; left: .2em;}
+  li {
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    transition: all 0.2s ease;
+  }
+  li:hover {
+    color: #369;
+    background-color: #EEE;
+    left: .2em;
+  }
 
 }
 
-
 /* route-link anchor tags */
-a {padding: 5px; text-decoration: none; font-family: Arial, Helvetica, sans-serif; }
-a:visited, a:link {color: #444;}
-a:hover {color: white; background-color: #1171a3; }
-a.router-link-active {color: white; background-color: #52b9e9; }
+.navbar-default .navbar-nav > li > a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  &:visited, &:link {
+    color: #444;
+  }
+  &:hover {
+    color: white;
+    background-color: #1171a3;
+  }
+  &.active {
+    color: white;
+    background-color: #52b9e9;
+  }
+}
 
-.selected { background-color: #EEE; color: #369; }
+.selected {
+  background-color: #EEE;
+  color: #369;
+}
 
 .badge {
   font-size: small;
