--- a/src/day4/forms-live-coding-template-driven/forms.css
+++ b/src/day4/forms-live-coding-template-driven/forms.css
@@ -31,15 +31,15 @@ md-card {
     justify-content: center;
 }
 
-md-input {
+mdInput {
     width: 100%;
 }
 
-md-input, label, select {
+mdInput, label, select {
     margin-right: 8px;
 }
 
-md-input:last-child {
+mdInput:last-child {
     margin-right: 0;
 }
 
